Wed Feb 22 04:57:42 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/NonBlocking_Conn_Test.cpp (test_connect):

          Fixed syntax error.  s/sizeof ACE_TCHAR/sizeof (ACE_TCHAR)/.

Wed Feb 21 21:46:18 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-pharlap.h:
        * ace/config-WinCE.h:
        * ace/OS_NS_stdio.inl: Changed ACE_LACKS_SETFILEPOINTEREX to
          ACE_LACKS_WIN32_SETFILEPOINTEREX to be consistent with the other
          ACE_*_WIN32_*things.

        * ace/config-pharlap.h:
        * ace/config-WinCE.h:
        * ace/NT_Service.{h cpp}:
        * examples/NT_Service/nt_svc.h:
        * examples/NT_Service/main.cpp:
          Also added ACE_LACKS_WIN32_SERVICES for Pharlap and CE. This marks
          a platform that is Windows, but doesn't have Windows services.

        * ace/Configuration.{h cpp}:
        * ace/Registry.{h cpp}: Rather than exclude registry-using code using
          ACE_HAS_PHARLAP, use a new setting ACE_LACKS_WIN32_REGISTRY.

        * ace/config-pharlap.h: Added ACE_LACKS_WIN32_REGISTRY.

        * protocols/ace/HTBP/HTBP_Environment.cpp:
        * examples/Reactor/WFMO_Reactor/Registry_Changes.cpp:
        * examples/Registry/test_registry_update.cpp:
        * examples/Registry/test_registry_iterator.cpp:
        * tests/Config_Test.cpp: Don't try registry stuff
          if ACE_LACKS_WIN32_REGISTRY is set.

        * examples/Reactor/WFMO_Reactor/Window_Messages.cpp: Don't try this if
          ACE_LACKS_MSG_WFMO is set.

        * apps/JAWS/server/IO.{h cpp}:
        * apps/JAWS/server/HTTP_Handler.{h cpp}:
        * apps/JAWS/server/HTTP_Server.{h cpp}:
        * apps/JAWS2/JAWS/IO.{h cpp}:
        * apps/JAWS2/JAWS/IO_Acceptor.{h cpp}:
        * apps/JAWS2/JAWS/IO_Handler.{h cpp}:
        * apps/JAWS3/jaws3/Asynch_IO.cpp:
        * examples/APG/Proactor/HA_Proactive_Status.{h cpp}:
        * examples/Connection/blocking/SPIPE-acceptor.{h cpp}: